Completed index.html adding animations, centering elements, rewrote syntax for header section background image. Also started about.html page. Will add media queries to all pages at the end.

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 	padding: 0;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
-
 a {
 	text-decoration: none;
 	color: #2EA2CC;
@@ -27,7 +26,7 @@ nav a:hover {
 	color: #ffffff;
 }
 
-nav a img {
+nav a .logo {
 	float: left;
 	margin-top: 6px;
 	margin-left: 45px;
@@ -35,6 +34,7 @@ nav a img {
 	width: 145px;
 	padding-left: 65px;
 	padding-right: 25px;
+	animation-duration: 5s;
 }
 
 nav ul {
@@ -49,41 +49,51 @@ nav li {
 	margin-right: 25px;
 }
 
+
 /*header section with fixed background*/
 
+
 header {
-	height: 500px;
-	background-image: 
-		linear-gradient(
-	      rgba(0, 0, 0, 0.5), 
-	      rgba(0, 0, 0, 0.5)
-	    ),
-		url("../img/nurse-group.jpg"); 
+	background-image: url(../img/nurse-group.png);
+	background-attachment: fixed;	 
 	background-size: cover;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	
+	background-position: center;
+	height: 500px;
 	color: #ffffff;
 	text-align: center;
-	font-weight: lighter;
 }
 
-header > h1 {
+header .overlay {
+	position: absolute;
+	height: 500px;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.65);
+	
+}
+
+header .head {
 	position: absolute;
 	width: 100%;
 	top: 100px;
 	font-size: 65px;
+	opacity: 0;
 }
 
-header > h3 {
+header .js-head-animate {
+	animation-duration: 2s;
+	opacity: 1;
+}
+
+header .overlay h3 {
 	position: absolute;
 	width: 100%;
 	top: 250px;
 	font-size: 30px;
 	color: #2EA2CC;
+
 }
 
-header .left-button,.right-button {
+header .leftButton,.rightButton {
 	position: absolute;
 	top: 380px;
 	padding: 15px;
@@ -92,8 +102,8 @@ header .left-button,.right-button {
 	border-color: #2EA2CC;
 	border-radius: 3px;
 	border-width: 6px;
-	font-size: 15px;
-	font-weight: bold;
+	font-size: 20px;
+	font-weight: 500;
 	color: #ffffff;
 	cursor: pointer; 
 	cursor: hand;
@@ -101,18 +111,31 @@ header .left-button,.right-button {
 	transition-duration: 1.5s;
 }
 
-header .left-button:hover,.right-button:hover {
+header .leftButton:hover,.rightButton:hover {
 	background-color: #2EA2CC;
-	font-size: 20px;
+	font-size: 22px;
+	font-weight: 100;
 
 }
 
-header .left-button {
-	left: 52%;	
+header .leftButton {
+	left: 52%;
+	opacity: 0;	
 }
 
-header .right-button {
+header .js-leftButton-animate {
+	opacity: 1;
+	animation-duration: 2.5s;
+}
+
+header .rightButton {
 	right: 52%;	
+	opacity: 0;
+}
+
+header .js-rightButton-animate {
+	opacity: 1;
+	animation-duration: 2.5s;
 }
 
 /*Brief Description Section*/
@@ -123,15 +146,19 @@ header .right-button {
  }
 
  .wrapper {
-	margin: 0 auto;
- 	width: 950px;
+	margin-left: 2%;
+	margin-right: ;
  	padding-top: 50px;
+ 	padding-left: 75px;
  }
 
 .info {
- 	float: left;
- 	width: 300px;
+	float: left;
+ 	width: 290px;
+  	margin-right: 100px;
  	text-align: center;
+ 	 
+
  }
 
  .info h3 {
@@ -141,6 +168,7 @@ header .right-button {
 
  .info h4 {
  	font-weight: lighter;
+ 	line-height: 175%;
  }
 
  .info img {
@@ -149,23 +177,23 @@ header .right-button {
 
  .info .subInfoA {
  	opacity: 0;
-
-
- }.info .subInfoB {
+ }
+ .info .subInfoB {
  	opacity: 0;
-
- }.info .subInfoC {
+ }
+ .info .subInfoC {
  	opacity: 0;
  }
 .info .js-subInfo-animate-a { 
 	opacity: 1;
 	animation-duration: .5s; 
-}.info .js-subInfo-animate-b { 
+}
+.info .js-subInfo-animate-b { 
 	opacity: 1;
 	animation-duration: 1.5s; 
-}.info .js-subInfo-animate-c { 
+}
+.info .js-subInfo-animate-c { 
 	opacity: 1;
-	
 	animation-duration: 2.5s; 
 }
 
@@ -176,17 +204,28 @@ header .right-button {
 	height: 300px;
 }
 
-.contact img {
+.contact .mailImage {
 	float: left;
 	margin-top: 50px;
+	padding-left: 100px;
 }
+
+.contact .mailImage {
+	opacity: 0;
+}
+
+.contact .js-mailImage-animate {
+	opacity: 1;
+	animation-duration: 2s; 
+}
+
 
 .contact .contactText {
 	display: inline-block;
 	text-align: center;
 	margin-top: 50px;
 	margin-left: 50px;
-	margin-right: 50px;
+	margin-right: 0px;
 	color: #ffffff;
 	width: 600px;
 }
@@ -204,6 +243,7 @@ header .right-button {
 .contact .contactBtn {
 	padding: 15px;
 	margin-top: 75px;
+	margin-right: 100px;
 	float: right;
 	background: none;
 	border: double;
@@ -211,18 +251,26 @@ header .right-button {
 	border-radius: 3px;
 	border-width: 6px;
 	font-size: 15px;
-	font-weight: bold;
-	color: #000000;
+	font-weight: 500;
+	color: #ffffff;
 	cursor: pointer; 
 	cursor: hand;
 	-webkit-transition-duration: 1.5s; 
 	transition-duration: 1.5s;
+	opacity: 0;
 }
+
+.contact .js-contactBtn-animate {
+	opacity: 1;
+	animation-duration: 2s;
+}
+
 
 .contactBtn:hover {
 	background-color: #000000;
-	font-size: 20px;
+	font-size: 17px;
 	color: #ffffff;
+	font-weight: 100
 }
 
 /*footer*/
@@ -246,7 +294,7 @@ footer a  img {
 
 footer .copy {
 	position: absolute;
-	left: 400px;
+	left: 500px;
 	margin-top: 35px;	
 
 }
@@ -256,5 +304,7 @@ footer .ref {
 	margin-right: 50px;
 	margin-top: 25px;
 }
+
+
 
 
