Added animation to the, More Details Section image and buttons.

--- a/css/about.css
+++ b/css/about.css
@@ -3,14 +3,150 @@
 	padding: 0;
 }
 
+/*Nav Bar Section*/
+nav {
+	background-color: rgba(0, 0, 0, 1);
+}
+
+
+/*Three pictures as header.*/
 .imgRow {
+	position: fixed;
+	top: 75px;
+	z-index: -1;
 	float: left;
-	height: 300px;
+	height: 350px;
 	width: 100%
+	
 }
 
 .imgRow img {
 	float: left;
-	height: 300px;
+	height: 350px;
 	width: 426.5px;
 }
+
+/*About Section*/
+.about {
+	background-color: #ffffff;
+	margin-top: 350px;
+}
+
+.wrap {
+	margin-right: 90px;
+	margin-left: 90px;
+	padding-top: 50px;
+	
+}
+
+.about .wrap h1 {
+	font-size: 45px;
+	animation-duration: 3s;
+}
+
+
+.about .wrap .aboutTextWrap {
+	margin-top: 50px;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+
+
+.aboutTextWrap .aboutText {
+	margin-top: 25px;
+	line-height: 175%;
+}
+
+.aboutText h3 {
+	font-weight: 900;
+}
+
+.aboutText p {
+	font-weight: 100;
+}
+
+.aboutTextWrap .quote {
+	margin: 50px 100px;
+	font-size: 20px;
+	text-align: center;
+	line-height: 175%;
+
+}
+
+/*More Details Section*/
+
+.moreDetails {
+	background-color: #2EA2CC;
+	height: 300px;
+}
+
+.moreDetails .handImage {
+	float: left;
+	margin-top: 50px;
+	padding-left: 100px;
+}
+
+.moreDetails .handImage {
+	opacity: 0;
+}
+
+.moreDetails .js-handImage-animate {
+	opacity: 1;
+	animation-duration: 3s; 
+}
+
+
+.moreDetails .moreDetailText {
+	display: inline-block;
+	text-align: center;
+	margin-top: 50px;
+	margin-left: 50px;
+	margin-right: 0px;
+	color: #ffffff;
+	width: 600px;
+}
+
+.moreDetails h2 {
+	font-size: 55px;
+}
+
+.moreDetails h3 {
+	font-size: 20px;
+	font-weight: lighter;
+}
+
+
+.moreDetails .detailBtn {
+	padding: 15px;
+	margin-top: 75px;
+	margin-right: 100px;
+	float: right;
+	background: none;
+	border: double;
+	border-color: #000000;
+	border-radius: 3px;
+	border-width: 6px;
+	font-size: 15px;
+	font-weight: 500;
+	color: #ffffff;
+	cursor: pointer; 
+	cursor: hand;
+	-webkit-transition-duration: 1.5s; 
+	transition-duration: 1.5s;
+	opacity: 0;
+}
+
+.moreDetails .js-detailBtn-animate {
+	opacity: 1;
+	animation-duration: 2s;
+}
+
+
+.detailBtn:hover {
+	background-color: #000000;
+	font-size: 17px;
+	color: #ffffff;
+	font-weight: 100
+}
+
+
