--- a/css/about.css
+++ b/css/about.css
@@ -159,7 +159,7 @@ nav {
 .detailBtn:hover {
 	background-color: #000000;
 	font-size: 17px;
-	color: #ffffff;
+	color: #2EA2CC;	
 	font-weight: 100
 }
 
