--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
+
 a {
 	text-decoration: none;
 	color: #2EA2CC;
@@ -51,8 +52,6 @@ nav li {
 
 
 /*header section with fixed background*/
-
-
 header {
 	background-image: url(../img/nurse-group.png);
 	background-attachment: fixed;	 
@@ -269,7 +268,7 @@ header .js-rightButton-animate {
 .contactBtn:hover {
 	background-color: #000000;
 	font-size: 17px;
-	color: #ffffff;
+	color: #2EA2CC;
 	font-weight: 100
 }
 
