--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@ nav {
 	z-index: -1;
 	float: left;
 	height: 350px;
-	width: 100%
+	width: 100%;
 	
 }
 
@@ -32,7 +32,6 @@ nav {
 	background-color: #ffffff;
 	margin-top: 350px;
 	height: 100%;
-
 }
 
 .wrap {
@@ -62,10 +61,20 @@ nav {
 
 .aboutText h3 {
 	font-weight: 900;
+	font-size: 25px;
+	margin-bottom: 10px;
 }
 
 .aboutText p {
 	font-weight: 100;
+	font-size: 20px;
+	margin-bottom: 50px;
+}
+
+.aboutText .list {
+	margin-left: 25px;
+	font-size: 20px;
+	line-height: 175%;
 }
 
 .aboutTextWrap .quoteTop, .quoteBottom {
