--- a/css/services.css
+++ b/css/services.css
@@ -104,8 +104,9 @@ nav li {
 	margin-bottom: 10px;
 }
 
-.optionsDetails button {
-	margin-top: 30px;
+.optionsDetails .btn {
+	position: relative;
+	top: 30px;
 	padding: 15px;
 	background: none;
 	border: double;
@@ -122,7 +123,7 @@ nav li {
 	opacity: 0;
 }
 
-.optionsDetails button:hover {
+.optionsDetails .btn:hover {
 	font-size: 20px;
 	color: #2EA2CC;
 	background-color: #000000;
