--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-* {
+.* {
 	margin: 0;
 	padding: 0;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
@@ -186,7 +186,6 @@ header .js-rightButton-animate {
 
  .wrapper {
 	margin-left: 2%;
-	margin-right: ;
  	padding-top: 50px;
  	padding-left: 75px;
  }
@@ -194,7 +193,7 @@ header .js-rightButton-animate {
 .wrapper .info {
 	float: left;
  	width: 290px;
-  	margin-right: 100px;
+  	margin-right: 90px;
  	text-align: center;
  	 
 
@@ -351,7 +350,7 @@ footer .ref {
    nav a .logo {
    		margin-top: 10px;
        	margin-left: 10px;
-		
+	}	
 }
 
 @media only screen and (max-width: 1052px) {
@@ -465,12 +464,229 @@ footer .ref {
 
 /*Brief Desciption Section*/
 @media only screen and (max-width: 1270px) {
-	.info {
-   		margin-right: 0px;
-    }	
+	.wrapper .info {
+		margin-right: 85px;
+	}	
+
 }
 
+@media only screen and (max-width: 1241px) {
+	.wrapper .info {
+		margin-right: 75px;
+	}	
 
+}
+
+@media only screen and (max-width: 1210px) {
+	.wrapper .info {
+		margin-right: 65px;
+	}	
+
+}
+
+@media only screen and (max-width: 1180px) {
+	.wrapper {
+		padding-left: 55px;
+	}
+
+	.wrapper .info {
+		margin-right: 55px;
+	}	
+
+}
+
+@media only screen and (max-width: 1129px) {
+	.wrapper {
+		padding-left: 45px;
+	}
+
+	.wrapper .info {
+		margin-right: 45px;
+	}	
+
+}
+
+@media only screen and (max-width: 1088px) {
+	.wrapper {
+		padding-left: 35px;
+	}
+
+	.wrapper .info {
+		margin-right: 35px;
+	}	
+
+}
+
+@media only screen and (max-width: 1046px) {
+	.wrapper {
+		padding-left: 25px;
+	}
+
+	.wrapper .info {
+		margin-right: 25px;
+	}	
+
+}
+
+@media only screen and (max-width: 1006px) {
+	.wrapper {
+		padding-left: 15px;
+	}
+
+	.wrapper .info {
+		margin-right: 15px;
+	}	
+
+}
+@media only screen and (max-width: 965px) {
+	.wrapper {
+		padding-left: 10px;
+	}
+
+	.wrapper .info {
+		margin-right: 10px;
+	}	
+
+}
+
+@media only screen and (max-width: 945px) {
+	.wrapper {
+		padding-left: 25px;
+	}
+
+	.wrapper .info {
+		width: 265px;
+
+	}
+
+}
+
+@media only screen and (max-width: 884px) {
+	.wrapper {
+		padding-left: 5px;
+	}
+}
+
+@media only screen and (max-width: 863px) {
+	.wrapper .info {
+		width: 250px;
+	}
+}
+
+@media only screen and (max-width: 818px) {
+	.wrapper {
+		padding-left: 30px;
+	}
+
+	.wrapper .info {
+		width: 235px;
+	}
+
+	.info h2 {
+		font-size: 18px;
+	}
+
+	.info h4 {
+		font-size: 15px;
+	}
+}
+
+@media only screen and (max-width: 796px) {
+	.wrapper {
+		padding-left: 20px;
+	}
+}
+
+@media only screen and (max-width: 787px) {
+	.wrapper {
+		padding-left: 10px;
+	}
+}
+
+@media only screen and (max-width: 777px) {
+	.wrapper {
+		padding-left: 5px;
+	}
+
+	.wrapper .info {
+		width: 220px;
+	}
+
+	.info img {
+		height: 75px;
+		width: 75px;
+	}
+}
+
+@media only screen and (max-width: 777px) {
+	.wrapper .info {
+		width: 200px;
+	}
+
+}	
+
+@media only screen and (max-width: 664px) {
+	.descript {
+ 		height: 800px;	
+ 	}
+
+	.wrapper {
+		padding-left: 75px;
+	}
+
+	.wrapper .info {
+		width: 450px;
+	}
+
+}
+
+@media only screen and (max-width: 570px) {
+	.wrapper {
+		padding-left: 50px;
+	}
+
+	.wrapper .info {
+		width: 450px;
+	}
+
+}
+
+@media only screen and (max-width: 530px) {
+	.wrapper {
+		padding-left: 25px;
+	}
+
+	.wrapper .info {
+		width: 400px;
+	}
+
+}
+
+@media only screen and (max-width: 450px) {
+	.wrapper {
+		padding-left: 15px;
+	}
+
+	.wrapper .info {
+		width: 350px;
+	}
+
+}
+
+@media only screen and (max-width: 375px) {
+	.descript {
+ 		height: 850px;	
+ 	}
+
+	.wrapper {
+		padding-left: 15px;
+	}
+
+	.wrapper .info {
+		width: 275px;
+	}
+
+}
 /* End of Media Queries*/
 
 
