--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ header .js-rightButton-animate {
  	width: 100%;
  }
 
- .wrapper {
+ .descript .wrapper {
 	margin-left: 2%;
  	padding-top: 50px;
  	padding-left: 75px;
@@ -236,16 +236,21 @@ header .js-rightButton-animate {
 }
 
 
-/* Contact Section */
+/* CTA Section */
 .contact {
 	background-color: #2EA2CC;
 	height: 300px;
 }
 
+.contact .wrapper {
+	margin-left: 2%;
+	margin-right: 2%;
+ }
+
 .contact .mailImage {
 	float: left;
-	margin-top: 50px;
-	padding-left: 100px;
+	margin-top: 100px;
+	margin-left: 15%;
 }
 
 .contact .mailImage {
@@ -258,14 +263,12 @@ header .js-rightButton-animate {
 }
 
 
-.contact .contactText {
-	display: inline-block;
-	text-align: center;
-	margin-top: 50px;
-	margin-left: 50px;
-	margin-right: 0px;
+.wrapper .contactText {
+	margin: auto;
+	padding-top: 100px;
+	padding-left: 350px;
 	color: #ffffff;
-	width: 600px;
+	width: auto;
 }
 
 .contact h2 {
@@ -279,10 +282,10 @@ header .js-rightButton-animate {
 
 
 .contact .contactBtn {
+	position: absolute;
 	padding: 15px;
-	margin-top: 75px;
-	margin-right: 150px;
-	float: right;
+	right: 12%;
+	top: 1025px;
 	background: none;
 	border: double;
 	border-color: #000000;
@@ -323,7 +326,7 @@ footer {
 footer a  img {
 	float: left;
 	margin-top: 6px;
-	margin-left: 135px;
+	margin-left: 25px;
 	height: 60px;
 	width: 145px;
 	padding-right: 25px;
@@ -331,22 +334,25 @@ footer a  img {
 
 
 footer .copy {
-	position: absolute;
-	left: 500px;
-	margin-top: 35px;	
+	margin: auto;
+	width: 100%;
+	padding-top: 35px;	
 
 }
 
 footer .ref {
-	float: right;
-	margin-right: 50px;
-	margin-top: 25px;
+	position: absolute;
+	right: 4%;
+	bottom: 2%;
 }
 
 /*Media Queries*/
 
 /*Nav Bar Queries*/
 @media only screen and (max-width: 1052px) {
+   nav {
+   		width: 100%;
+   }
    nav a .logo {
    		margin-top: 10px;
        	margin-left: 10px;
@@ -464,97 +470,97 @@ footer .ref {
 
 /*Brief Desciption Section*/
 @media only screen and (max-width: 1270px) {
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 85px;
 	}	
 
 }
 
 @media only screen and (max-width: 1241px) {
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 75px;
 	}	
 
 }
 
 @media only screen and (max-width: 1210px) {
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 65px;
 	}	
 
 }
 
 @media only screen and (max-width: 1180px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 55px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 55px;
 	}	
 
 }
 
 @media only screen and (max-width: 1129px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 45px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 45px;
 	}	
 
 }
 
 @media only screen and (max-width: 1088px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 35px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 35px;
 	}	
 
 }
 
 @media only screen and (max-width: 1046px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 25px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 25px;
 	}	
 
 }
 
 @media only screen and (max-width: 1006px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 15px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 15px;
 	}	
 
 }
 @media only screen and (max-width: 965px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 10px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		margin-right: 10px;
 	}	
 
 }
 
 @media only screen and (max-width: 945px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 25px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 265px;
 
 	}
@@ -562,23 +568,23 @@ footer .ref {
 }
 
 @media only screen and (max-width: 884px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 5px;
 	}
 }
 
 @media only screen and (max-width: 863px) {
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 250px;
 	}
 }
 
 @media only screen and (max-width: 818px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 30px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 235px;
 	}
 
@@ -592,23 +598,23 @@ footer .ref {
 }
 
 @media only screen and (max-width: 796px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 20px;
 	}
 }
 
 @media only screen and (max-width: 787px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 10px;
 	}
 }
 
 @media only screen and (max-width: 777px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 5px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 220px;
 	}
 
@@ -619,7 +625,7 @@ footer .ref {
 }
 
 @media only screen and (max-width: 777px) {
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 200px;
 	}
 
@@ -630,44 +636,44 @@ footer .ref {
  		height: 800px;	
  	}
 
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 75px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 450px;
 	}
 
 }
 
 @media only screen and (max-width: 570px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 50px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 450px;
 	}
 
 }
 
 @media only screen and (max-width: 530px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 25px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 400px;
 	}
 
 }
 
 @media only screen and (max-width: 450px) {
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 15px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 350px;
 	}
 
@@ -678,15 +684,202 @@ footer .ref {
  		height: 850px;	
  	}
 
-	.wrapper {
+	.descript .wrapper {
 		padding-left: 15px;
 	}
 
-	.wrapper .info {
+	.descript .wrapper .info {
 		width: 275px;
 	}
 
 }
+
+/*CTA Section*/
+@media only screen and (max-width: 1104px) {
+	.wrapper .contactText {
+		padding-left: 300px;
+	}
+}
+
+@media only screen and (max-width: 1060px) {
+	.wrapper .contactText {
+		padding-left: 250px;
+	}
+
+	.contact .mailImage {
+		margin-left: 10%;
+	}
+}
+
+@media only screen and (max-width: 1000px) {
+	.wrapper .contactText {
+		padding-left: 200px;
+	}
+	.contact .mailImage {
+		margin-left: 4%;
+	}
+}
+
+@media only screen and (max-width: 975px) {
+	.wrapper .contactText {
+		padding-top: 50px;
+		padding-right: 150px;
+
+	}
+}
+
+@media only screen and (max-width: 700px) {
+	.wrapper .contactText {
+		padding-right: 125px;
+
+	}
+}
+
+@media only screen and (max-width: 674px) {
+	.wrapper .contactText {
+		padding-right: 100px;
+
+	}
+}
+
+@media only screen and (max-width: 1220px) {
+	.contact .contactBtn {
+		right: 10%;
+
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+	.contact .contactBtn {
+		right: 8%;
+
+	}
+}
+
+@media only screen and (max-width: 1175px) {
+	.contact .contactBtn {
+		right: 6%;
+
+	}
+
+@media only screen and (max-width: 1145px) {
+	.contact .contactBtn {
+		right: 2%;
+
+	}
+}	
+
+@media only screen and (max-width: 975px) {
+	.contact .contactBtn {
+		right: 10%;
+
+	}
+}
+
+@media only screen and (max-width: 925px) {
+	.contact .contactBtn {
+		right: 8%;
+
+	}
+}
+
+@media only screen and (max-width: 815px) {
+	.contact .contactBtn {
+		right: 6%;
+
+	}
+}
+
+@media only screen and (max-width: 695px) {
+	.contact .contactBtn {
+		right: 4%;
+
+	}
+}
+
+@media only screen and (max-width: 664px) {
+	.contact .mailImage {
+		display: none;
+	
+	}
+
+	.wrapper .contactText {
+		float: left;
+		padding-top: 100px;
+		padding-left: 4%;
+		margin: 0;
+		width: 300px;
+
+
+	}
+	.contact .contactBtn {
+		top: 1440px;
+		right: 15%;
+	}
+
+	.contact h2 {
+		font-size: 35px;
+	}
+
+	.contact h3 {
+		font-size: 17px; 
+	}
+
+}
+
+@media only screen and (max-width: 496px) {
+	.wrapper .contactText {
+		width: 275px;
+
+	}
+
+	.contact .contactBtn {
+		right: 10%;
+	}
+}
+
+@media only screen and (max-width: 462px) {
+	.contact .contactBtn {
+		right: 5%;
+		padding: 5px;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.wrapper .contactText {
+		width: 260px;
+
+	}
+
+	.contact .contactBtn {
+		right: 4%;
+		padding: 10px;
+	}
+}
+
+@media only screen and (max-width: 376px) {
+	.wrapper .contactText {
+		width: 245px;
+
+	}
+
+	.contact .contactBtn {
+		right: 2%;
+		padding: 10px;
+		top: 1430px;
+	}
+
+	.contact h2 {
+		font-size: 28px;
+	}
+
+	.contact h3 {
+		font-size: 14px; 
+	}
+}
+
+
+
 /* End of Media Queries*/
 
 
