--- a/css/main.css
+++ b/css/main.css
@@ -335,7 +335,6 @@ footer a  img {
 
 footer .copy {
 	margin: auto;
-	width: 100%;
 	padding-top: 35px;
 	padding-left: 500px;	
 
@@ -371,9 +370,19 @@ footer .ref {
     }
 }
 @media only screen and (max-width: 901px) {
+    nav {
+    	height: 50px;
+    }
+
+    nav a .logo {
+    	margin-top: 5px;
+    	height: 40px;
+		width: 105px;
+    }
+
     .hamburger {
     	display: inline-block;
-  		margin-top: 10px;
+  		margin-top: 5px;
   		margin-right: 25px;
     }
 
